--- a/fkapp/app/src/main/res/values/strings.xml
+++ b/fkapp/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
 <resources>
     <string name="app_name">fkapp</string>
+    <string name="title_home">国内疫情</string>
+    <string name="title_dashboard">国外疫情</string>
+    <string name="title_notifications">我的</string>
+    <string name="todo">TODO</string>
+    <string name="tag1">本土现有确诊</string>
+    <string name="tag2">现有确诊</string>
+    <string name="tag3">累计确诊</string>
+    <string name="tag4">无症状感染者</string>
+    <string name="tag5">境外输入</string>
+    <string name="tag6">累计死亡</string>
+    <string name="defaultTextValue" />
+    <string name="dead">死亡</string>
+    <string name="heal">治愈</string>
+    <string name="total">累计</string>
+    <string name="now">现有</string>
+    <string name="location">地区</string>
+    <string name="healTotal">累计治愈</string>
+    <string name="desc">以下表格从左到又依次为\n地区、新增确诊、累积确诊、治愈、死亡</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
 </resources>
